// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App display correctly with favourites 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <div>
      <h1>
        Weather
      </h1>
    </div>
     
    <div>
      <button
        className="geoBtn"
        onClick={[Function]}
      >
        Change Geolocation
      </button>
    </div>
  </div>
  <div
    className="Weather grid"
  >
    <div
      className="mainInfo grid"
    >
      <div
        className="cityName"
      >
        <h3>
          Kiev
        </h3>
      </div>
      <div
        className="cityTemp"
      >
        8.02
         ℃
      </div>
      <div
        className="cityIcon"
      >
        <img
          alt="weather icon"
          src="https://openweathermap.org/themes/openweathermap/assets/vendor/owm/img/widgets/10n.png"
        />
      </div>
    </div>
    <div
      className="Info flex"
    >
      <div>
        Wind speed:
      </div>
      <div>
        3
         m/s
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Clouds:
      </div>
      <div>
        90
        %
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Pressure:
      </div>
      <div>
        1011
        hpa
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Humidity:
      </div>
      <div>
        100
        %
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Coordinates:
      </div>
      <div>
        [
        30.52
        , 
        50.43
        ]
      </div>
    </div>
  </div>
  <div
    className="AddForm"
  >
    <div>
      <h2>
        Favourites
      </h2>
    </div>
    <div>
      <form
        onSubmit={[Function]}
      >
        <input
          id="addCity"
          placeholder="Add city"
          required={true}
        />
        <button
          className="addBtn"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="WeatherList"
  >
    <div
      className="Weather"
    >
      <div
        className="loader"
      />
    </div>
    <div
      className="Weather"
    >
      <div
        className="loader"
      />
    </div>
    <div
      className="Weather"
    >
      <div
        className="loader"
      />
    </div>
  </div>
</div>
`;

exports[`App display correctly without favourites 1`] = `
<div
  className="App"
>
  <div
    className="header"
  >
    <div>
      <h1>
        Weather
      </h1>
    </div>
     
    <div>
      <button
        className="geoBtn"
        onClick={[Function]}
      >
        Change Geolocation
      </button>
    </div>
  </div>
  <div
    className="Weather grid"
  >
    <div
      className="mainInfo grid"
    >
      <div
        className="cityName"
      >
        <h3>
          Kiev
        </h3>
      </div>
      <div
        className="cityTemp"
      >
        8.02
         ℃
      </div>
      <div
        className="cityIcon"
      >
        <img
          alt="weather icon"
          src="https://openweathermap.org/themes/openweathermap/assets/vendor/owm/img/widgets/10n.png"
        />
      </div>
    </div>
    <div
      className="Info flex"
    >
      <div>
        Wind speed:
      </div>
      <div>
        3
         m/s
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Clouds:
      </div>
      <div>
        90
        %
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Pressure:
      </div>
      <div>
        1011
        hpa
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Humidity:
      </div>
      <div>
        100
        %
      </div>
    </div>
    <div
      className="propsRow flex"
    >
      <div>
        Coordinates:
      </div>
      <div>
        [
        30.52
        , 
        50.43
        ]
      </div>
    </div>
  </div>
  <div
    className="AddForm"
  >
    <div>
      <h2>
        Favourites
      </h2>
    </div>
    <div>
      <form
        onSubmit={[Function]}
      >
        <input
          id="addCity"
          placeholder="Add city"
          required={true}
        />
        <button
          className="addBtn"
          type="submit"
        >
          +
        </button>
      </form>
    </div>
  </div>
  <div
    className="WeatherList"
  />
</div>
`;
